trellosys_portfolio_update_3

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ h3{
 }
 #home-cover{
 	height: 100%;
-	background-image: url("../img/bg-home.jpg");
+	background-image: url("../img/home_test.jpg");
 }		
 
 #home-content-box{
